WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294036
v8.dev: Container height is wrong in Safari
https://bugs.webkit.org/show_bug.cgi?id=294036
Summary
v8.dev: Container height is wrong in Safari
Ahmad Saleem
Reported
2025-06-04 10:39:34 PDT
Hi Team, This is split from
bug 293179
, which fixed bug about hover bug but not height bug (my fault, I should've create two bugs or explained them better). Website Link:
https://v8.dev/features/explicit-resource-management#explicit-resource-management-support
*** Steps to Reproduce *** 1) Open above article 2) Notice the container with browser images *** Expected Result *** Container should be square matching height and width similar to Chrome and Firefox. *** Actual Result *** Height is 172px while width is 146px in Safari while in Chrome and Firefox, it is 146 x 146 (removing subpixel deliberately here). Just raising, so we can fix it. Thanks!
Attachments
Test reduction
(254 bytes, text/html)
2025-06-04 13:32 PDT
,
alan
no flags
Details
screenshot
(687.22 KB, image/png)
2025-06-04 20:10 PDT
,
alan
no flags
Details
Patch
(4.49 KB, patch)
2025-06-05 09:39 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.78 KB, patch)
2025-06-05 16:04 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(7.80 KB, patch)
2025-06-05 19:37 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-04 10:40:06 PDT
<
rdar://problem/152587405
>
alan
Comment 2
2025-06-04 13:32:58 PDT
Created
attachment 475484
[details]
Test reduction
alan
Comment 3
2025-06-04 20:10:58 PDT
Created
attachment 475486
[details]
screenshot This is fixed now. Will upload a patch soon.
alan
Comment 4
2025-06-05 09:39:44 PDT
Created
attachment 475488
[details]
Patch
alan
Comment 5
2025-06-05 16:04:05 PDT
Created
attachment 475490
[details]
Patch
alan
Comment 6
2025-06-05 19:37:49 PDT
Created
attachment 475492
[details]
[fast-cq]Patch
EWS
Comment 7
2025-06-06 05:13:25 PDT
Committed
295912@main
(e596744fd94e): <
https://commits.webkit.org/295912@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 475492
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug