v8.dev: Container height is wrong in Safari https://bugs.webkit.org/show_bug.cgi?id=294036 <rdar://problem/152587405>

Reviewed by Antti Koivisto.

Sadly we can't say that outside list marker does not stretch the line box (webkit.org/b/256390)
but we can say that the line has no height when the line box has no content when there's nothing
but outside list marker on it (which essentially collapses the line box).

* LayoutTests/fast/inline/list-item-with-no-content-at-all-stretch-expected.html: Added.
* LayoutTests/fast/inline/list-item-with-no-content-at-all-stretch.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingUtils.cpp:
(WebCore::Layout::InlineFormattingUtils::inlineLevelBoxAffectsLineBox const):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::LineBoxBuilder::constructInlineLevelBoxes):

Canonical link: https://commits.webkit.org/295912@main